--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="otheracti">boutton$</string>
     <string name="menu">hello</string>
     <string name="Retour">retour arriere</string>
+    <string name="te_tau_vaitini">Te Tau Vaitini</string>
 </resources>
