--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="_0">0</string>
     <string name="commencer">Commencer</string>
     <string name="triangle">Button</string>
+    <string name="x">X</string>
 </resources>
