--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="_1_chien">1 chien</string>
     <string name="_9_nuages">9 nuages</string>
     <string name="_0">0</string>
+    <string name="kaoha_nui">Kaoha nui</string>
 </resources>
