--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,11 @@
     <string name="_9_nuages">9 nuages</string>
     <string name="_0">0</string>
     <string name="kaoha_nui">Kaoha nui</string>
+    <string name="x">X</string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_4">4</string>
+    <string name="_7">7</string>
+    <string name="commencer">commencer</string>
+    <string name="hae_en_marquisien">hae en marquisien</string>
 </resources>
