--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="_7">7</string>
     <string name="commencer">commencer</string>
     <string name="hae_en_marquisien">hae en marquisien</string>
+    <string name="te_kuea">Te Kuea</string>
+    <string name="te_apoipoi">Te Apoipoi</string>
 </resources>
