--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">retest4</string>
+    <string name="app_name">Eo App</string>
     <string name="otheracti">boutton$</string>
-    <string name="menu">hello</string>
-    <string name="Retour">retour arriere</string>
+    <string name="menu">Kaoha nui</string>
+    <string name="Retour">a hua i hope</string>
     <string name="te_tau_vaitini">Te Tau Vaitini</string>
     <string name="te_tau_vaitinitxt">Te tau Vaitini</string>
     <string name="nombrestxt">Nombres</string>
