--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,8 @@
     <string name="e_poti">E POTI</string>
     <string name="e_mene">E MENE</string>
     <string name="e_pereo_o">E PEREO\'O</string>
+    <string name="_8">8</string>
+    <string name="_6" />
+    <string name="sixfaux">6</string>
+    <string name="potu_en_marquisien">potu</string>
 </resources>
