--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,9 @@
     <string name="_6" />
     <string name="sixfaux">6</string>
     <string name="potu_en_marquisien">potu</string>
+    <string name="_3">3</string>
+    <string name="_4faux">4faux</string>
+    <string name="_10">10</string>
+    <string name="_5">5</string>
+    <string name="_9">9</string>
 </resources>
